<resources>
    <string name="app_name">Travel Apps</string>
    <string name="action_setting">Setting</string>

    <string name="btn_text_wisata">\u0020\u0020Wisata\u0020\u0020</string>
    <string name="btn_text_hotel">Hotel</string>
    <string name="btn_text_restoran">Restoran</string>
    <string name="btn_text_moneychanger">Money</string>
    <string name="btn_text_setting">Share</string>
    <string name="btn_text_login">Login</string>
    <string name="btn_text_about">About</string>
    <string name="btn_text_feedback">Feedback</string>

</resources>
